@@ -240,10 +240,10 @@ class RewriteRule(Rule):
 
 
     def filter_tag(self, tag, attrs):
-        debug(NIGHTMARE, "rule %s filter_tag" % self.title)
+        #debug(NIGHTMARE, "rule %s filter_tag" % self.title)
         part = self.replace[0]
-        debug(NIGHTMARE, "original tag", tag, "attrs", attrs)
-        debug(NIGHTMARE, "replace", num_part(part), "with", self.replace[1])
+        #debug(NIGHTMARE, "original tag", tag, "attrs", attrs)
+        #debug(NIGHTMARE, "replace", num_part(part), "with", self.replace[1])
         if part==TAGNAME:
             return (STARTTAG, self.replace[1], attrs)
         if part==TAG:
@@ -272,15 +272,15 @@ class RewriteRule(Rule):
                     continue
             # nothing matched, just append the attribute as is
             newattrs[attr] = val
-        debug(NIGHTMARE, "filtered tag", tag, "attrs", newattrs)
+        #debug(NIGHTMARE, "filtered tag", tag, "attrs", newattrs)
         return (STARTTAG, tag, newattrs)
 
 
     def filter_complete(self, i, buf):
-        debug(NIGHTMARE, "rule %s filter_complete" % self.title)
+        #debug(NIGHTMARE, "rule %s filter_complete" % self.title)
         part = self.replace[0]
-        debug(NIGHTMARE, "original buffer", `buf`)
-        debug(NIGHTMARE, "part",num_part(part))
+        #debug(NIGHTMARE, "original buffer", `buf`)
+        #debug(NIGHTMARE, "part",num_part(part))
         if part==COMPLETE:
             buf[i:] = [[DATA, self.replace[1]]]
         elif part==TAG:
@@ -291,7 +291,7 @@ class RewriteRule(Rule):
             buf[-1] = (ENDTAG, self.replace[1])
         elif part==ENCLOSED:
             buf[i+1:-1] = [(DATA, self.replace[1])]
-        debug(NIGHTMARE, "filtered buffer", `buf`)
+        #debug(NIGHTMARE, "filtered buffer", `buf`)
 
     def get_name(self):
         return "rewrite"
